--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
-    "react-navigation-stack": "^2.7.0"
+    "react-navigation-stack": "^2.7.0",
+    "react-navigation-tabs": "^2.9.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
