--- a/package.json
+++ b/package.json
@@ -8,19 +8,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@freakycoder/react-native-helpers": "^0.1.3",
     "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-dynamic-search-bar": "^1.2.1",
+    "react-native-dynamic-vector-icons": "^1.0.0",
+    "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-spinkit": "^1.5.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-stack": "^2.7.0",
-    "react-navigation-tabs": "^2.9.0"
+    "react-navigation-tabs": "^2.9.0",
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
