--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "@freakycoder/react-native-helpers": "^0.1.3",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-firebase/app": "^8.0.0",
     "expo": "~37.0.3",
+    "firebase": "7.9.0",
+    "firebase-tools": "^8.4.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-dotenv": "^0.2.0",
     "react-native-dynamic-search-bar": "^1.2.1",
     "react-native-dynamic-vector-icons": "^1.0.0",
     "react-native-elements": "^2.0.2",
