--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-navigation": "^4.3.9",
     "react-navigation-stack": "^2.7.0",
     "react-navigation-tabs": "^2.9.0",
+    "redux": "^4.0.5",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
