--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-dynamic-vector-icons": "^1.0.0",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
